# OP-Pi

./: .gitignore  .gitmodules  README.md  TODO.md
hardware/: OP-Pi_model.blend  OP-Pi_model.blend1  V1-PCB.fzz  pcb.fzz  schematics.fzz
hardware/pcb_design/: pcb_copperBottom.gbl  pcb_copperTop.gtl  pcb_drill.txt  pcb_maskBottom.gbs  pcb_maskTop.gts  pcb_pnp.txt  pcb_silkTop.gto
software/: OLED_Driver.py  class_diagram.txt  dependencies_python.txt  encoder.py  gpio_osc_test.py  input_manager.py  op_pi.py  op_pi_old.py  rotary_encoder.py  rotarytests.py  screen_manager.py  sonic_pi_tool.py  synthtests.py  test.py
software/OLED_example/: OLED_Driver.py  main.py
software/OPPi/: CMakeLists.txt  main.cpp
software/OP_Pi/: .gitignore  CMakeLists.txt  daw.cpp  daw.h  effect.cpp  effect.h  eq.cpp  eq.h  input_manager.cpp  input_manager.h  instrument.cpp  instrument.h  main.cpp  requirements  reverb.cpp  reverb.h  screen_manager.cpp  screen_manager.h  sound_utils.h  synth.cpp  synth.h  timeline.cpp  timeline.h
software/OP_Pi/inputmanager/: input_manager_gpio.cpp  input_manager_gpio.h  input_manager_keyboard.cpp  input_manager_keyboard.h  test_rotary_encoder.cpp
software/OP_Pi/oled/: DEV_Config.cpp  DEV_Config.h  OLED_Driver.cpp  OLED_Driver.h  OLED_GFX.cpp  OLED_GFX.h
software/OP_Pi/oled/fonts/: ASCII_Font.h
software/OP_Pi/screenmanager/: oled_driver.cpp  oled_driver.h  screen_manager.cpp  screen_manager.h
software/OP_Pi/src/: daw.cpp  daw.h  instrument.h  sampler.cpp  sampler.h  sound_utils.h  synth.cpp
software/OP_Pi/src/inputmanager/: input_manager.h  input_manager_gpio.cpp  input_manager_gpio.h  rotary_encoder.cpp
software/OP_Pi/src/screenmanager/: screen_manager.cpp  screen_manager.h
software/supercollider/: osctest.scd  synthexamples.scd  synthtest.scd  test.scd
software/supercollider/synths/: alien_hit.scd  alien_pad.scd  fake_strings.scd  heavy_bass.scd  moog_bass.scd  moog_bass_2.scd  old_synth.scd  organ.scd  prophet.scd  saw_bass.scd  saw_bells.scd  shy_organ.scd  square.scd  string_lead.scd  triangle_lead.scd  voice_lead.scd  wobble.scd
